# LabNAM

./: 2023级大作业答辩流程.docx  README.md
2023级C++大作业题目及要求/: ~$22 级大作业答辩流程.docx  提交说明.txt
2023级C++大作业题目及要求/C++大作业【上学期】/: 上学期大作业的要求.txt
2023级C++大作业题目及要求/C++大作业【下学期】/: 下学期大作业的要求.txt
2023级C++大作业题目及要求/C++大作业【下学期】/第X组【组员1、组员2、组员3、组员4】探索性题目1/: readme.txt  第X组探索性题目1.ppt
ASSET/NAMLab/Windows/: NAM.h  removeRemnant.cpp
NAMLab/Source Codes/Linux/: CMakeLists.txt  run_dataset.cpp
NAMLab/Source Codes/Linux/Sources/: ComputeDBC.cpp  ComputeNeighbor.cpp  ComputeRegion.cpp  scanning.cpp
NAMLab/Source Codes/Windows/: ComputeDT.cpp  ComputeSI.cpp  ComputeThreshold.cpp  NAMLabDebugx64.props  NAMLabReleasex64.props  TextureCascadeWithSlidingWindow.cpp  TextureNormalized.cpp  UpdateProperty.cpp  convertToMat.h  rgb2lab.h  run_demo.cpp  unionFind.h
build-opencv451_qt-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-opencv451_qt-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/debug/: opencv451_qt.ilk
build-opencv451_qt-Desktop_Qt_5_14_2_MSVC2017_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release
build-opencv451_qt-Desktop_Qt_5_14_2_MSVC2017_64bit-Release/release/: moc_mainwindow.cpp  moc_predefs.h
opencv451_qt/: mainwindow.cpp  mainwindow.ui  opencv451_qt.pro
第5组【陈梦泽】探索性题目1/第5组探索性题目1的源代码/: readme.txt
第5组【陈梦泽】探索性题目1/第5组探索性题目1的源代码/gui/: widget.cpp  widget.h  widget.ui
第5组【陈梦泽】探索性题目1/第5组探索性题目1的源代码/untitled4/: Diagonal_Priority.cpp  Header.h  main.cpp  mainwindow.cpp  mainwindow.ui  untitled4.pro
(+51 files in other folders)
